blueprints/external-etcd/main.tf
provider "aws" {
  region = var.aws_region
}

provider "kubernetes" {
  host                   = module.eks_blueprints.eks_cluster_endpoint
  cluster_ca_certificate = base64decode(module.eks_blueprints.eks_cluster_certificate_authority_data)
  exec {
    api_version = "client.authentication.k8s.io/v1beta1"
    command     = "aws"
    # This requires the awscli to be installed locally where Terraform is executed
    args = ["eks", "get-token", "--cluster-name", module.eks_blueprints.eks_cluster_id]
  }
}

provider "helm" {
  kubernetes {
    host                   = module.eks_blueprints.eks_cluster_endpoint
    cluster_ca_certificate = base64decode(module.eks_blueprints.eks_cluster_certificate_authority_data)

    exec {
      api_version = "client.authentication.k8s.io/v1beta1"
      command     = "aws"
      # This requires the awscli to be installed locally where Terraform is executed
      args = ["eks", "get-token", "--cluster-name", module.eks_blueprints.eks_cluster_id]
    }
  }
}

data "aws_caller_identity" "current" {}
data "aws_availability_zones" "available" {}

data "aws_ami" "ubuntu" {
  most_recent = true
  name_regex  = "^ubuntu-eks/k8s_${local.cluster_version}/images/*" # Ubuntu Server for EKS, SSD Volume Type

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
  filter {
    name   = "architecture"
    values = ["x86_64"]
  }
  owners = ["099720109477"] # Canonical
}

data "aws_subnet" "one" {
  id = module.vpc.private_subnets[0]
}
data "aws_subnet" "two" {
  id = module.vpc.private_subnets[1]
}
data "aws_subnet" "three" {
  id = module.vpc.private_subnets[2]
}

locals {
  name            = basename(path.cwd)
  cluster_version = "1.22"

  vpc_cidr = "10.0.0.0/16"
  azs      = slice(data.aws_availability_zones.available.names, 0, 3)

  tags = {
    Blueprint  = local.name
    GithubRepo = "github.com/ondat/terraform-eksblueprints-ondat-addon"
  }

  iam_policy_name_one   = join("-", [local.name, "ondat", "data", "1"])
  iam_policy_name_two   = join("-", [local.name, "ondat", "data", "2"])
  iam_policy_name_three = join("-", [local.name, "ondat", "data", "3"])
  iam_policies_one      = ["arn:aws:iam::${data.aws_caller_identity.current.account_id}:policy/${local.iam_policy_name_one}"]
  iam_policies_two      = ["arn:aws:iam::${data.aws_caller_identity.current.account_id}:policy/${local.iam_policy_name_two}"]
  iam_policies_three    = ["arn:aws:iam::${data.aws_caller_identity.current.account_id}:policy/${local.iam_policy_name_three}"]

  userdata_one   = join("\n", ["#!/bin/bash", module.attached_ebs_one.userdata_snippets_by_az[data.aws_subnet.one.availability_zone]])
  userdata_two   = join("\n", ["#!/bin/bash", module.attached_ebs_two.userdata_snippets_by_az[data.aws_subnet.two.availability_zone]])
  userdata_three = join("\n", ["#!/bin/bash", module.attached_ebs_three.userdata_snippets_by_az[data.aws_subnet.three.availability_zone]])
}

resource "aws_iam_policy" "data1" {
  name   = local.iam_policy_name_one
  policy = module.attached_ebs_one.iam_role_policy_document
}

resource "aws_iam_policy" "data2" {
  name   = local.iam_policy_name_two
  policy = module.attached_ebs_two.iam_role_policy_document
}

resource "aws_iam_policy" "data3" {
  name   = local.iam_policy_name_three
  policy = module.attached_ebs_three.iam_role_policy_document
}

resource "aws_security_group" "ondat_access" {
  name        = join("-", [local.name, "data", "ondat_access"])
  description = "Allow access between Ondat nodes"
  vpc_id      = module.vpc.vpc_id
}

resource "aws_security_group_rule" "ondat_access_tcp" {
  type              = "egress"
  from_port         = 1024
  to_port           = 65535
  protocol          = "tcp"
  self              = true
  security_group_id = aws_security_group.ondat_access.id
}

resource "aws_security_group_rule" "ondat_access_udp" {
  type              = "egress"
  from_port         = 1024
  to_port           = 65535
  protocol          = "udp"
  self              = true
  security_group_id = aws_security_group.ondat_access.id
}

resource "aws_security_group_rule" "ondat_etcd_tcp" {
  type      = "egress"
  from_port = 2379
  to_port   = 2379
  protocol  = "tcp"
  # Unfortunately, NLBs don't like SG-based rules
  cidr_blocks       = module.vpc.private_subnets_cidr_blocks
  security_group_id = aws_security_group.ondat_access.id
}

resource "aws_security_group_rule" "ondat_api_tcp" {
  type              = "ingress"
  from_port         = 5703
  to_port           = 5705
  protocol          = "tcp"
  self              = true
  security_group_id = aws_security_group.ondat_access.id
}

resource "aws_security_group_rule" "ondat_rwx_tcp" {
  type              = "ingress"
  from_port         = 25695
  to_port           = 25960
  protocol          = "tcp"
  self              = true
  security_group_id = aws_security_group.ondat_access.id
}

resource "aws_security_group_rule" "ondat_grpc_tcp" {
  type              = "ingress"
  from_port         = 5701
  to_port           = 5701
  protocol          = "tcp"
  self              = true
  security_group_id = aws_security_group.ondat_access.id
}

resource "aws_security_group_rule" "ondat_gossip_tcp" {
  type              = "ingress"
  from_port         = 5710
  to_port           = 5711
  protocol          = "tcp"
  self              = true
  security_group_id = aws_security_group.ondat_access.id
}

resource "aws_security_group_rule" "ondat_gossip_udp" {
  type              = "ingress"
  from_port         = 5710
  to_port           = 5711
  protocol          = "udp"
  self              = true
  security_group_id = aws_security_group.ondat_access.id
}


module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "~> 3.0"

  name = local.name
  cidr = local.vpc_cidr

  azs = local.azs

  public_subnets  = [for k, v in slice(data.aws_availability_zones.available.names, 0, 3) : cidrsubnet(local.vpc_cidr, 8, k)]
  private_subnets = [for k, v in slice(data.aws_availability_zones.available.names, 0, 3) : cidrsubnet(local.vpc_cidr, 8, k + 10)]

  enable_nat_gateway   = true
  create_igw           = true
  enable_dns_hostnames = true
  single_nat_gateway   = true

  # Manage so we can name
  manage_default_network_acl    = true
  default_network_acl_tags      = { Name = "${local.name}-default" }
  manage_default_route_table    = true
  default_route_table_tags      = { Name = "${local.name}-default" }
  manage_default_security_group = true
  default_security_group_tags   = { Name = "${local.name}-default" }

  public_subnet_tags = {
    "kubernetes.io/role/elb" = "1"
  }

  private_subnet_tags = {
    "kubernetes.io/role/internal-elb" = "1"
  }

  tags = local.tags
}

#---------------------------------------------------------------
# Example to consume eks_blueprints module
#---------------------------------------------------------------
module "eks_blueprints" {
  source          = "github.com/aws-ia/terraform-aws-eks-blueprints"
  cluster_name    = local.name
  cluster_version = local.cluster_version

  # EKS Cluster VPC and Subnet mandatory config
  vpc_id             = module.vpc.vpc_id
  private_subnet_ids = module.vpc.private_subnets

  # SG config for cross-node access
  worker_additional_security_group_ids = [aws_security_group.ondat_access.id]

  managed_node_groups = {
    ondat_1 = {
      block_device_mappings   = []
      create_launch_template  = true
      custom_ami_id           = data.aws_ami.ubuntu.id
      pre_userdata            = local.userdata_one
      additional_iam_policies = local.iam_policies_one
      format_mount_nvme_disk  = false
      node_group_name         = "managed-ondat-ondemand-1"
      additional_tags         = { Group = join("-", [local.name, "ondat", "1"]) }
      subnet_ids              = [data.aws_subnet.one.id]
      ami_type                = "CUSTOM"
      instance_types          = ["t3.large"]
      desired_size            = 1
      max_size                = 1
      min_size                = 1
      max_unavailable         = 1
      k8s_labels = {
        "storageos-node" = "1"
      }
    }
    ondat_2 = {
      block_device_mappings   = []
      create_launch_template  = true
      custom_ami_id           = data.aws_ami.ubuntu.id
      pre_userdata            = local.userdata_two
      additional_iam_policies = local.iam_policies_two
      format_mount_nvme_disk  = false
      node_group_name         = "managed-ondat-ondemand-2"
      additional_tags         = { Group = join("-", [local.name, "ondat", "2"]) }
      subnet_ids              = [data.aws_subnet.two.id]
      ami_type                = "CUSTOM"
      instance_types          = ["t3.large"]
      desired_size            = 1
      max_size                = 1
      min_size                = 1
      max_unavailable         = 1
      k8s_labels = {
        "storageos-node" = "1"
      }
    }
    ondat_3 = {
      block_device_mappings   = []
      create_launch_template  = true
      custom_ami_id           = data.aws_ami.ubuntu.id
      pre_userdata            = local.userdata_three
      additional_iam_policies = local.iam_policies_three
      format_mount_nvme_disk  = false
      node_group_name         = "managed-ondat-ondemand-3"
      additional_tags         = { Group = join("-", [local.name, "ondat", "3"]) }
      subnet_ids              = [data.aws_subnet.three.id]
      ami_type                = "CUSTOM"
      instance_types          = ["t3.large"]
      desired_size            = 1
      max_size                = 1
      min_size                = 1
      max_unavailable         = 1
      k8s_labels = {
        "storageos-node" = "1"
      }
    }
  }
}

#---------------------------------------------------------------
# Example to consume attached_ebs module for persistent data
#---------------------------------------------------------------
module "attached_ebs_one" {
  source = "github.com/ondat/etcd3-bootstrap//terraform/modules/attached_ebs?ref=v0.1.2"

  group = join("-", [local.name, "ondat", "1"])
  attached_ebs = {
    "storageos-config-ondat-1" = {
      size                    = 10
      availability_zone       = data.aws_subnet.one.availability_zone
      encrypted               = true
      volume_type             = "gp3"
      block_device_aws        = "/dev/xvdf"
      block_device_os         = "/dev/nvme1n1"
      block_device_mount_path = "/var/lib/storageos"
    }
    "storageos-data-ondat-1" = {
      size                    = 100
      availability_zone       = data.aws_subnet.one.availability_zone
      encrypted               = true
      volume_type             = "gp3"
      block_device_aws        = "/dev/xvdg"
      block_device_os         = "/dev/nvme2n1"
      block_device_mount_path = "/var/lib/storageos/data/dev1"
    }
  }
}

module "attached_ebs_two" {
  source = "github.com/ondat/etcd3-bootstrap//terraform/modules/attached_ebs?ref=v0.1.2"

  group = join("-", [local.name, "ondat", "2"])
  attached_ebs = {
    "storageos-config-ondat-2" = {
      size                    = 10
      availability_zone       = data.aws_subnet.two.availability_zone
      encrypted               = true
      volume_type             = "gp3"
      block_device_aws        = "/dev/xvdf"
      block_device_os         = "/dev/nvme1n1"
      block_device_mount_path = "/var/lib/storageos"
    }
    "storageos-data-ondat-2" = {
      size                    = 100
      availability_zone       = data.aws_subnet.two.availability_zone
      encrypted               = true
      volume_type             = "gp3"
      block_device_aws        = "/dev/xvdg"
      block_device_os         = "/dev/nvme2n1"
      block_device_mount_path = "/var/lib/storageos/data/dev1"
    }
  }
}

module "attached_ebs_three" {
  source = "github.com/ondat/etcd3-bootstrap//terraform/modules/attached_ebs?ref=v0.1.2"

  group = join("-", [local.name, "ondat", "3"])
  attached_ebs = {
    "storageos-config-ondat-3" = {
      size                    = 10
      availability_zone       = data.aws_subnet.three.availability_zone
      encrypted               = true
      volume_type             = "gp3"
      block_device_aws        = "/dev/xvdf"
      block_device_os         = "/dev/nvme1n1"
      block_device_mount_path = "/var/lib/storageos"
    }
    "storageos-data-ondat-3" = {
      size                    = 100
      availability_zone       = data.aws_subnet.three.availability_zone
      encrypted               = true
      volume_type             = "gp3"
      block_device_aws        = "/dev/xvdg"
      block_device_os         = "/dev/nvme2n1"
      block_device_mount_path = "/var/lib/storageos/data/dev1"
    }
  }
}

#---------------------------------------------------------------
# Example to consume etcd3-terraform module
#---------------------------------------------------------------
module "etcd" {
  source     = "github.com/ondat/etcd3-terraform?ref=v0.0.3"
  vpc_id     = module.vpc.vpc_id
  subnet_ids = module.vpc.private_subnets

  ssd_size      = 32
  instance_type = "t3.large"

  client_cidrs = module.vpc.private_subnets_cidr_blocks # etcd access for private nodes
  dns          = "gs-etcd.int"
  environment  = "a"
}

#---------------------------------------------------------------
# Example to consume eks_blueprints_kubernetes_addons module
#---------------------------------------------------------------
module "eks_blueprints_kubernetes_addons" {
  source = "github.com/aws-ia/terraform-aws-eks-blueprints//modules/kubernetes-addons"

  eks_cluster_id       = module.eks_blueprints.eks_cluster_id
  eks_cluster_endpoint = module.eks_blueprints.eks_cluster_endpoint
  eks_oidc_provider    = module.eks_blueprints.oidc_provider
  eks_cluster_version  = module.eks_blueprints.eks_cluster_version

  # EKS Addons
  enable_ondat = true # default is false

  # Ondat addon configuration
  # ondat_create_cluster               = true                                   # whether to create the Ondat cluster
  ondat_etcd_endpoints = ["https://${module.etcd.lb_address}:2379"]
  ondat_etcd_ca        = module.etcd.ca_cert
  ondat_etcd_cert      = module.etcd.client_cert
  ondat_etcd_key       = module.etcd.client_key
  # ondat_admin_username               = "storageos"                            # ondat API username
  # ondat_admin_password               = "storageos"                            # ondat API password
}
